--- a/homework/Day_002_HW.ipynb
+++ b/homework/Day_002_HW.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "      dtype='object', length=122)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,10 +381,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -513,7 +511,7 @@
        " 'AMT_REQ_CREDIT_BUREAU_YEAR']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,8 +528,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "比較：loc、iloc\n",
+    "\n",
+    "df.loc[k]：讀取A中，index為k的行\n",
+    "\n",
+    "df.iloc[k]：讀取A中，第k行"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -658,20 +667,152 @@
        "10      100014       0         Cash loans           F"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# df.loc[要截取的row範圍, 要截取的column範圍]\n",
+    "# 方法一：df.loc[要截取的row範圍, 要截取的column內容]\n",
     "\n",
     "df.loc[0:10, 'SK_ID_CURR':'CODE_GENDER']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SK_ID_CURR</th>\n",
+       "      <th>TARGET</th>\n",
+       "      <th>NAME_CONTRACT_TYPE</th>\n",
+       "      <th>CODE_GENDER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100002</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100003</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100004</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Revolving loans</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100006</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100007</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>100008</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>100009</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>100010</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>100011</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>100012</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Revolving loans</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SK_ID_CURR  TARGET NAME_CONTRACT_TYPE CODE_GENDER\n",
+       "0      100002       1         Cash loans           M\n",
+       "1      100003       0         Cash loans           F\n",
+       "2      100004       0    Revolving loans           M\n",
+       "3      100006       0         Cash loans           F\n",
+       "4      100007       0         Cash loans           M\n",
+       "5      100008       0         Cash loans           M\n",
+       "6      100009       0         Cash loans           F\n",
+       "7      100010       0         Cash loans           M\n",
+       "8      100011       0         Cash loans           F\n",
+       "9      100012       0    Revolving loans           M"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 方法二：df.iloc[要截取的row範圍, 要截取的column範圍]\n",
+    "\n",
+    "df.iloc[0:10, 0:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -743,13 +884,13 @@
        "Name: 5, Length: 122, dtype: object"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# df.loc[x]：輸出第 x 筆資料的所有內容\n",
+    "# df.loc[x]、df.iloc[x]：輸出第 x 筆資料的所有內容，兩者此時沒差別\n",
     "\n",
     "df.loc[5]"
    ]
@@ -760,13 +901,6 @@
    "source": [
     "#### 還有各種數之不盡的資料操作，重點還是取決於實務中遇到的狀況和你想問的問題，在馬拉松中我們也會陸續提到更多例子"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -791,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +934,7 @@
        "RangeIndex(start=0, stop=307511, step=1)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +974,7 @@
        "      dtype='object', length=122)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -984,7 +1118,7 @@
        " 'AMT_REQ_CREDIT_BUREAU_YEAR']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1466,7 @@
        "[8 rows x 106 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
